Resolves: tdf#150797 page preview scrolling not updating position

Change-Id: I8b495d755278ce850d69da8b7fb8588a4f111bd1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139444
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>